# TareaAlgoco2_3

./: .gitignore  BruteForce.cpp  BruteForce.h  CMakeLists.txt  DynamicProgramming.cpp  DynamicProgramming.h  MemoryTracker.hpp  README.me  cost_functions.cpp  cost_functions.h  main.cpp  requirements.txt
Data-Test/: README.me  graficos.py  gv.py  start.py
Matrices/: cost_insert.txt  cost_replace.txt  cost_transpose.txt
